style.css
/* ... */
.portfolio-wrapper {
  width: 1020px;
  padding-left: 40px;
  box-sizing: border-box;
}

.portfolio-wrapper h2 {
  font-size: 30px;
  line-height: 18px;
  color: #666d89;
  font-weight: 900;
  margin-top: 24px;
  margin-bottom: 25px;
  width: 250px;
  /* margin: 24px 0; */
}

.portfolio-wrapper p {
  padding-top: 2px;
  margin-bottom: 0px;
  font-size: 18px;
  line-height: 30px;
  color: #767e9e;
  font-weight: 300;
}

.portfolio-filter {
  margin: 0;
  padding: 0;
  margin-top: 11px;
  padding-left: 1px;
  list-style: none;
  display: flex;
  justify-content: space-between;
  width: 288px;
  margin-bottom: 19px;
}

/* ? Changing elements width manually due to PixelPerfect */

.filter-element:first-child a {
  width: 29px;
}
.filter-element:nth-child(2) a {
  width: 78px;
}
.filter-element:nth-child(3) a {
  width: 93px;
}
.filter-element:last-child a {
  width: 58px;
}

.filter-element-a {
  border: 1px solid #767e9e;
  border-radius: 5px;
  box-sizing: border-box;
  height: 22px;
  display: inline-block;
  text-decoration: none;
  font-size: 12px;
  line-height: 13px;
  color: #767e9e;
  font-weight: 400;
  padding-top: 3px;
  padding-bottom: 3px;
  text-align: center;
}
.filter-element-active {
  color: white;
  border: 1px solid white;
  border-radius: 5px;
}

.filter-element-a:hover {
  color: white;
  border: 1px solid white;
  border-radius: 5px;
}

.portfolio-list-shuffle {
  flex-direction: row-reverse;
}
.portfolio-list {
  margin: 0;
  margin-left: -1px;
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding-left: 0;
  height: 620px;
  width: 941px;
  overflow: hidden;
  -moz-overflow: hidden;
}

.portfolio-element {
  margin-bottom: 17px;
}
.portfolio-img {
  box-sizing: border-box;
  width: 220px;
  height: 187px;
}
.portfolio-element .portfolio-img:focus {
  border: #f06c64 solid 5px;
}

/* Section about us */

.feedback-anchor,
.about-us-anchor,
.portfolio-anchor,
.services-anchor {
  height: 95px;
  margin-top: -95px;
}
.about-us {
  background-color: #f2f2f2;
  display: flex;
  justify-content: center;
  height: 734px;
  box-sizing: border-box;
  border-bottom: #ffffff 6px solid;
}
.about-us-wrapper {
  width: 1020px;
  padding-left: 40px;
  box-sizing: border-box;
}

.about-us-h {
  font-size: 30px;
  line-height: 18px;
  color: #666d89;
  font-weight: 900;
  padding-top: 43px;
  letter-spacing: -0.2px;
  width: 250px;
}

.about-us-text {
  font-size: 18px;
  line-height: 30px;
  color: #767e9e;
  font-weight: 300;
  padding-top: 2px;
  width: 940px;
  text-align: justify;
}

.us-people {
  padding: 0;
  padding-top: 27px;
  display: flex;
  width: 940px;
  justify-content: space-between;
}

.people-element {
  display: inline-block;
  width: 301px;
}
/* ? pixel perfect  */
.people-element:first-child {
  margin-left: -1px;
  margin-right: 0px;
  width: 299px;
}

.people-element:nth-child(2) {
  margin-left: 3px;
  margin-right: 4px;
}

.people-element:last-child {
  margin-left: 0px;
  margin-right: -1px;
}

.people-name {
  font-size: 18px;
  line-height: 18px;
  color: #666d89;
  font-weight: 900;
  height: 18px;
  width: 300px;
  overflow: hidden;
  -moz-overflow: hidden;
  margin-top: 14px;
  margin-bottom: 0px;
}

.people-descr {
  width: 300px;
  height: 60px;
  font-size: 12px;
  line-height: 21px;
  color: #767e9e;
  font-weight: 400;
  overflow: hidden;
  -moz-overflow: hidden;
  margin-top: 10px;
  margin-bottom: 0px;
  letter-spacing: -0.2px;
  text-align: justify;
}

/* ? Due to pixel perfect again */
.people-name:nth-child(2),
.people-descr:nth-child(2) {
  margin-left: 1px;
}

.people-social-list {
  padding-left: 0px;
  padding-top: 5px;
  padding-left: 1px;
  display: flex;
  justify-content: space-between;
  width: 154px;
  height: 34px;
  list-style-type: none;
}
/* ? Due to pixel perfect again. This template is not so symmetrical */
.people-element:last-child .people-name {
  margin-left: -1px;
}

.people-element:last-child .people-social-list {
  margin-left: -2px;
}

.people-social-list li:hover,
.people-social-list li:focus {
  opacity: 0.6;
}

.people-social-list li:active {
  opacity: 0.3;
}

/* singolo3 */
.feedback {
  background-color: #f06c64;
  display: flex;
  justify-content: center;
  border-bottom: #ea676b 6px solid;
  height: 648px;
}

.feedback-wrapper {
  width: 1020px;
  margin-left: 40px;
  padding-top: 43px;
}

.feedback-heading {
  font-size: 30px;
  line-height: 18px;
  color: #f0d8d9;
  font-weight: 900;
  width: 250px;
}
.feedback-descr {
  width: 939px;
  font-size: 18px;
  line-height: 30px;
  color: #f0d8d9;
  font-weight: 300;
  overflow: hidden;
  -moz-overflow: hidden;
  margin-top: 27px;
  letter-spacing: 0px;
  text-align: justify;
}

.contact-wrapper {
  display: flex;
  justify-content: space-between;
  margin-top: 44px;
  margin-right: 30px;
}

.contacts-descr {
  width: 301px;
}

.contact-form input,
textarea {
  width: 604px;
  height: 37px;
  background-color: #d6564f;
  border: none;
  border-radius: 5px;
  margin-bottom: 16px;
  font-size: 16px;
  color: #f0d8d9;
  font-weight: 600;
  padding-left: 15px;
  padding-top: 0px;
  line-height: 38px;
}

textarea {
  height: 193px;
  resize: none;
  width: 602px;
  padding-top: 7px;
}

.contact-form input::placeholder,
textarea::placeholder {
  color: #f48c8f;
  font-size: 12px;
  line-height: 20px;
}
.contact-form input::-moz-placeholder,
textarea::-moz-placeholder {
  color: #f48c8f;
  font-size: 12px;
  line-height: 36px;
  padding-top: 5px;
}

input.button-submit {
  margin-bottom: 0;
  height: 40px;
  width: 620px;
  cursor: pointer;
}

input.button-submit:hover {
  opacity: 0.8;
}

input.button-submit:active {
  opacity: 0.4;
}

.contacts-heading {
  margin: 0;
  font-size: 18px;
  line-height: 18px;
  color: #f0d8d9;
  font-weight: 900;
}
/* ... */

